add index files

--- a/index.html
+++ b/index.html
@@ -382,6 +382,9 @@
              </div>
             </div>
         </footer>
+        <!-- --------------------BACKDROP----------- -->
+<div class="backdrop">
 
+</div>
 </body>
 </html>
