add index files

--- a/index.html
+++ b/index.html
@@ -384,7 +384,52 @@
         </footer>
         <!-- --------------------BACKDROP----------- -->
 <div class="backdrop">
-
+<div class="modal">
+    <button type="button" class="modal-buttom">
+        <svg class="icon-close" width="8" height="8"> 
+            <use href="./images/icons.svg#icon-X"></use>
+        </svg>
+    </button>
+    <p class="modal-title">Leave your contacts and we will call you back</p>
+    <form class="modal-form">
+<div class="modal-field">
+        <label for="user-name class="modal-info">Name</label>
+<div class="modal-input-wrap">
+    <input type="text" class="modal-input" name="Name" id="name">
+<svg class="modal-icons" widht="18" height="18">
+    <use href="./images/icons.svg#icon-Name"></use>
+</svg>
+</div>
+</div>
+<div class="modal-field">
+<label for="user-phone" class="modal-info">Phone</label>
+<div class="modal-input-wrap">
+    <input type="text" class="modal-input" name="Phone" id="phone">
+<svg class="modal-icons" widht="18" height="18">
+    <use href="./images/icons.svg#icon-phone"></use>
+</svg>
+</div>
+</div>
+<div class="modal-field">
+<label for="user-email" class="modal-info">Email</label>
+<div class="modal-input-wrap">
+    <input type="text" class="modal-input" name="Email" id="email">
+<svg class="modal-icons" widht="18" height="18">
+    <use href="./images/icons.svg#icon-email"></use>
+</svg>
+</div>
+</div>
+<div class="modal-field">
+<label for="user-comment" class="modal-info">Comment</label>
+<div class="modal-input-wrap">
+    <input type="text" class="modal-input" name="Content" id="comment" textarea>
+<svg class="modal-icons" widht="18" height="18">
+    <use href="./images/icons.svg#icon-content"></use>
+</svg>
+</div>
+</div>
+    </form>
+</div>
 </div>
 </body>
 </html>
