--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <form class="modal-form">
         <p class="modal-title">Leave your contacts and we will call you back</p>
 <div class="modal-field">
-<label for="user-name" class="modal-info" id="user-name">Name</label>
+<label class="modal-info" id="user-name">Name</label>
 <div class="modal-input-wrap">
     <input type="text" class="modal-input" name="Name" id="name">
 <svg class="modal-icons" width="18" height="24">
@@ -419,7 +419,7 @@
 </div>
 </div>
 <div class="modal-field">
-<label for="user-phone" class="modal-info" id="user-phone">Phone</label>
+<label class="modal-info" id="user-phone">Phone</label>
 <div class="modal-input-wrap">
     <input type="text" class="modal-input" name="Phone" id="phone">
 <svg class="modal-icons" width="18" height="24">
@@ -428,16 +428,16 @@
 </div>
 </div>
 <div class="modal-field">
-<label for="user-email" class="modal-info" id="user-email">Email</label>
+<label class="modal-info" id="user-email">Email</label>
 <div class="modal-input-wrap">
-    <input type="text" class="modal-input" name="Email" id="email">
+    <input type="text" class="modal-input" name="Email">
 <svg class="modal-icons" width="18" height="24">
     <use href="./images/icons.svg#icon-email"></use>
 </svg>
 </div>
 </div>
 <div class="textarea-field">
-    <label for="user-comment" class="modal-info">Comment</label>
+    <label class="modal-info">Comment</label>
     <textarea name="text-area" id="user-comment" placeholder="Text input" class="textarea input-text">
     </textarea>
 </div>
