add index files

--- a/index.html
+++ b/index.html
@@ -381,19 +381,21 @@
                 </ul>
              </div>
              <div class="footer-send-email">
+                <form class="form">
                 <p class="footer-input">Subscribe</p>
                 <div class="footer-send">
                         <label for="email">
                         <input type="email" name="email" class="email" id="email" placeholder="E-mail">
                         </label>
-                        <button type="button" class="subscribe-button">Subscribe<span>
-                            <svg class="button-send-svg" width="24" height="20">
+                        <button type="submit" class="subscribe-button">Subscribe<span>
+                            <svg class="button-send-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-icon-send">
                                 </use>
                                 </svg>
                                 </span> </button>
                         
                 </div>
+            </form>
              </div>
             </div>
         </footer>
