--- a/index.html
+++ b/index.html
@@ -384,13 +384,13 @@
                 <div class="footer-send">
                     <p class="footer-input">Subscribe</p>
                     <form class="form">
-                        <label for="email" class="Subscribe-label">
+                        <label class="Subscribe-label">
                         <input type="email" name="email" class="email" id="email" placeholder="E-mail">
                         </label>
-                        <button type="submit" class="subscribe-button">Subscribe<span>
+                        <button type="submit" class="subscribe-button">Subscribe
                             <svg class="button-send-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-icon-send"></use>
-                                </svg></span> 
+                                </svg>
                             </button>
                             </form>
                 </div>
@@ -400,18 +400,17 @@
         </footer>
 <div class="backdrop is-open">
 <div class="modal">
-    <!-- <div class="button-paragraph"> -->
+
     <button type="button" class="modal-buttom">
         <svg class="icon-close" width="8" height="8"> 
             <use href="./images/icons.svg#icon-X"></use>
         </svg>
     </button>
     <p class="modal-title">Leave your contacts and we will call you back</p>
-    <!-- </div> -->
     <form class="modal-form">
         
 <div class="modal-field">
-<label for="user-name" class="modal-info" id="user-name">Name</label>
+<label for="user-name" class="modal-info">Name</label>
 <div class="modal-input-wrap">
     <input type="text" class="modal-input" name="user-name" id="user-name">
 <svg class="modal-icons" width="18" height="24">
@@ -420,7 +419,7 @@
 </div>
 </div>
 <div class="modal-field">
-<label for="user-phone" class="modal-info" id="user-phone">Phone</label>
+<label for="user-phone" class="modal-info">Phone</label>
 <div class="modal-input-wrap">
     <input type="text" class="modal-input" name="user-phone" id="user-phone">
 <svg class="modal-icons" width="18" height="24">
@@ -429,9 +428,9 @@
 </div>
 </div>
 <div class="modal-field">
-<label for="user-email" class="modal-info" id="user-email">Email</label>
+<label for="user-email" class="modal-info">Email</label>
 <div class="modal-input-wrap">
-    <input type="text" class="modal-input" name="user-email">
+    <input type="text" class="modal-input" name="user-email" id="user-email">
 <svg class="modal-icons" width="18" height="24">
     <use href="./images/icons.svg#icon-email"></use>
 </svg>
