add index files

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="footer-send">
                     <p class="footer-input">Subscribe</p>
                     <form class="form">
-                        <label class="Subscribe-label">
+                        <label class="subscribe-label">
                         <input type="email" name="email" class="email" id="email" placeholder="E-mail">
                         </label>
                         <button type="submit" class="subscribe-button">Subscribe
